added link to add-on options

--- a/index.html
+++ b/index.html
@@ -34,11 +34,13 @@
                 </div>
                 <div class="add_on_option">
                     <input type="checkbox" name="dual_antenna" id="dual_antenna">
-                    <label for="dual_antenna">双读头（分别控制）</label>
+                    <label for="dual_antenna"><a href="https://chao05.github.io/assets/FT200/FT200-videos-two-antennas.html">双读头（分别控制）</a>
+                    </label>
                 </div>
                 <div class="add_on_option">
                     <input type="checkbox" name="aux_port" id="aux_port">
-                    <label for="aux_port">启用扩展输入输出端口</label>
+                    <label for="aux_port"><a href="https://chao05.github.io/assets/FT200/FT200_aux_output_lock.html">启用扩展输入输出端口</a>
+                    </label>
                 </div>
                 <div class="add_on_option">
                     <input type="checkbox" name="inter_locking" id="inter_locking">
