added link for inter-locking

--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
                 </div>
                 <div class="add_on_option">
                     <input type="checkbox" name="inter_locking" id="inter_locking">
-                    <label for="inter_locking">互锁</label>
+                    <label for="inter_locking"><a href="https://chao05.github.io/assets/FT200/FT200_aux_inter_locking.html">互锁</a>
+                    </label>
                 </div>
 
                 <button type="submit">提交</button>
