--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
                 <input type="email" name="email" placeholder="@hafele.com.cn" maxlength="254" required="" id="id_email">
                 <label for="id_po_number">销售单号（'7'开头）:</label>
                 <input type="text" name="po_number" placeholder="76543210" maxlength="10" required="" id="id_po_number">
+                <label for="AKC_quantity">该单订购的蓝牙卡片（917.64.980）数量：</label>
+                <input type="number" min="1" placeholder="1" name="AKC_quantity" id="AKC_quantity" required>
+
                 <label for="id_client">客户:</label>
                 <input type="text" name="client" maxlength="20" id="id_client">
                 <label for="id_salesperson">销售人员:</label>
@@ -50,7 +53,7 @@
 
                 <button type="submit">提交</button>
             </form>
-            <p class="if_required">该表格前两项为必填，其余项为选填。</p>
+            <p class="if_required">该表格前三项为必填，其余项为选填。</p>
         </fieldset>
     </body>
 </html>
