added a box for text

--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
                     <option value="gz">广州</option>
                     <option value="cd">成都</option>
                 </select>
+
+                <label for="add-on_spec">请填入对所需扩展功能的描述</label>
+                <input type="text" name="add-on_spec" id="add-on_spec">
+
+
+
                 <label for="add_on">请选择需要哪种宏？（可多选）</label>
                 <div class="add_on_option">
                     <input type="checkbox" name="alarm" id="alarm">
