added element of textarea

--- a/index.html
+++ b/index.html
@@ -31,9 +31,8 @@
                     <option value="cd">成都</option>
                 </select>
 
-                <label for="add-on_spec">请填入对所需扩展功能的描述</label>
-                <input type="text" name="add-on_spec" id="add-on_spec">
-
+                <label for="add-on_spec">扩展功能(add-on)</label>
+                <textarea name="add-on_spec" id="add-on_spec" cols="30" rows="10"></textarea>
 
 
                 <label for="add_on">请选择需要哪种宏？（可多选）</label>
