added the attribute of placeholder to the element of textarea

--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
                 </select>
 
                 <label for="add-on_spec">扩展功能(add-on)</label>
-                <textarea name="add-on_spec" id="add-on_spec" cols="30" rows="10"></textarea>
+                <textarea name="add-on_spec" id="add-on_spec" 
+                cols="30" rows="10" placeholder="您可以将扩展功能的描述备注在此处"></textarea>
 
 
                 <label for="add_on">请选择需要哪种宏？（可多选）</label>
