modified the format of reminder for taking pic of serial no.

--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
                 <input type="text" name="po_number" placeholder="76543210" maxlength="10" required="" id="id_po_number">
                 <label for="AKC_quantity">该单订购的蓝牙卡片（917.64.980）数量：</label>
                 <input type="number" min="1" placeholder="1" name="AKC_quantity" id="AKC_quantity" required>
-                <label for="comment">复制如下文字至蓝牙卡片（917.64.980）订单备注处</label>
-                <textarea name="comment" id="comment" cols="30" rows="2" readonly>请仓库同事拍摄卡片序列号和订单号发送至产品部电子锁组（通过微信，企业微信等方式）</textarea>
+                <textarea name="reminder" id="reminder" cols="30" rows="3" readonly>蓝牙卡片（917.64.980）已下单，请仓库同事拍摄卡片序列号和订单号发送至产品部电子锁组（通过微信，企业微信等方式）</textarea>
 
                 <label for="id_client">客户:</label>
                 <input type="text" name="client" maxlength="20" id="id_client">
