commented out the code for adding hidden input element

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
                 
                 <label for="id_email">下单人邮箱地址:</label>
                 <input type="email" name="email" placeholder="@hafele.com.cn" maxlength="254" required="" id="id_email">
-                <input type="hidden" name="recipient_email" value="{{ form.email }}">
-
+                <!--<input type="hidden" name="recipient_email" value="{{ form.email }}">-->
+                
                 <label for="id_po_number">销售单号（'7'开头）:</label>
                 <input type="text" name="po_number" placeholder="76543210" maxlength="10" required="" id="id_po_number">
                 <label for="AKC_quantity">该单订购的蓝牙卡片（917.64.980）数量：</label>
